<resources>
    <string name="app_name">Gathering</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="fragment_1_text">a platform to create events, such as parties, reunions, and gatherings!</string>
    <string name="fragment_2_text">Bringing your family and friends together has never been so easy!</string>
    <string name="fragment_3_text">Invite guests and manage the event details!</string>
    <string name="signIn_button_text">Sign In</string>
    <string name="signUp_button_text">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_page">EventPage</string>
    <string name="my_event">MyEvent</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="event_title">Title</string>
    <string name="event_host">Host</string>
    <string name="event_description">Description</string>
    <string name="no_data_to_show">No event yet</string>
    <string name="filter">Filter</string>
    <string name="refine">Refine</string>
    <string name="sort_by">Sort By</string>
    <string name="my_contacts">my contacts</string>
    <string name="my_events">My events</string>
    <string name="closest_to_me">Closest to me</string>
    <string name="happening_next">Happening next</string>
    <string name="sort">sort</string>
    <string name="today_events">Today\'s Events</string>
    <string name="filter_by">Filter by</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="maybe">maybe</string>
    <string name="date">Date</string>
    <string name="address">Address</string>
    <string name="location">Location</string>
    <string name="event_min_attendee">Minimum attendee</string>
    <string name="attendees">Attendee</string>
    <string name="event_cost">Event cost</string>
    <string name="add_event">Add event</string>
    <string name="take_picture">Take Picture</string>
    <string name="pick_picture">Pick Picture</string>
    <string name="location_screen">Location Screen</string>
    <string name="take_pick_pic">Take / Pick pic</string>
    <string name="invite">Invite</string>
    <string name="ok">ok</string>
    <string name="you_are_here">You are here</string>
    <string name="open_gallery">open gallery</string>
    <string name="open_camera">open camera</string>
    <string name="rotate_right">rotate right</string>
    <string name="rotate_left">rotate left</string>
    <string name="delete">delete</string>
    <string name="attendee_email">Attendee email</string>
    <string name="event_name">Event name</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="time">Time</string>
    <string name="verification_email_sent_please_verify_your_email">Verification email sent. please verify your email.</string>
    <string name="please_check_your_inbox_to_verify_your_email_address">please check your inbox to verify your email address</string>
    <string name="send_again">send email again</string>
    <string name="back_to_sign_in">back to sign in</string>
    <string name="verified_your_email_address">verified your email address?</string>
    <string name="verified">Verified</string>
    <string name="verified_your_email_address_click_below">verified your email address? click below!</string>
    <string name="reset_pass_text"><u>Forgot password?</u></string>
    <string name="reset_pass_msg">Enter the email address for your Gathering account and we\'ll send you a link to reset your password.</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="reset_pass_info1">You should receive your reset link soon.</string>
    <string name="reset_pass_info2">Can\'t find the email?</string>
    <string name="reset_pass_info3">If the email address you entered does not match an existing account, you will not receive an email.</string>
    <string name="reset_pass_info4">You should also check your spam folder.</string>
    <string name="send_link">Send link</string>
    <string name="display_name">Display name</string>
    <string name="phone">Phone Number</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_changes">Save changes</string>
    <string name="favorite_events">My Favorite Events</string>
    <string name="personal_data">Personal Data</string>
    <string name="favorite_event">Favorite Event</string>
    <string name="sign_out">Sign out</string>
    <string name="attendees_count_hint_text">%s people invited to this event</string>
    <string name="enter_new_password">Enter a new password to reset the password on your account. we\'ll ask for this password every time you sign in.</string>
    <string name="btn_submit">submit</string>
    <string name="reset_your_password">Reset your password?</string>
    <string name="check_spam">check your spam folder.</string>
    <string name="back_to_sign_in_page">Back to Sign In page</string>
    <string name="tv_reset_pass">You have successfully Reset your Password.</string>
    <string name="attendees_count">0</string>

    <string name="add_attendee">Add Attendee</string>
    <string name="attendees_list">click to see attendees</string>
    <string name="when_does_it_start">when does it start?</string>
    <string name="when_does_it_take_place">when does it take place?</string>
    <string name="what_are_the_details">What are the detail?</string>
    <string name="where_is_the_location">Where is the location?</string>
    <string name="who_can_attend">who can attend?</string>
    <string name="edit_event">Edit event</string>
    <string name="nothing_to_show">Nothing to show!</string>
    <string name="event_detail_date_and_time">%s - %s</string>
    <string name="congratulations">Congratulations</string>
    <string name="Congratulations">\nCongratulations</string>
    <string name="event_content_description">"event_content_description"</string>
    <string name="topAppbar">"swipe left to delete"</string>
    <string name="who_is_coming_to_my_event">Who is Coming to My Event?</string>
    <string name="Guests">Guests</string>
    <string name="notifications">Notifications</string>
    <string name="channel_name">gatherz_notification_channel_name</string>
    <string name="channel_description">gatherz_notification_channel_description</string>
</resources>