<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding">

    <ImageView
        android:background="@drawable/ic_launcher_foreground"
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_sheet_imageView"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:background="@color/start_color"
        android:id="@+id/rotate_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rotate_left"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:background="@color/start_color"
        android:id="@+id/rotate_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rotate_right"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btn_camera"
        style="@style/buttonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/custom_button"
        android:text="@string/open_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <Button
        android:id="@+id/btn_gallery"
        style="@style/buttonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/custom_button"
        android:text="@string/open_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <Button
        android:id="@+id/btn_ok"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:text="@string/ok"
        app:layout_constraintTop_toBottomOf="@id/btn_camera" />


</androidx.constraintlayout.widget.ConstraintLayout>

