<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_event"
        android:layout_width="match_parent"
        android:layout_height="@dimen/img_height"
        android:scaleType="centerCrop"
        android:background="@color/start_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/tv_event_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tv_margin_top"
        android:layout_marginStart="@dimen/tv_margin_start"
        android:text="@string/event_title"
        android:textSize="@dimen/tv_text_size_medium"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_event" />

    <TextView
        android:id="@+id/tv_event_host"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tv_margin_start"
        android:layout_marginTop="@dimen/tv_margin_top"
        android:text="@string/event_host"
        android:textSize="@dimen/tv_text_size_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_event_title" />

    <TextView
        android:id="@+id/tv_event_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tv_margin_start"
        android:layout_marginTop="@dimen/tv_margin_top"
        android:text="@string/event_description"
        android:textSize="@dimen/tv_text_size_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_event_host" />

    <TextView
        android:id="@+id/tv_event_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tv_margin_start"
        android:layout_marginTop="@dimen/tv_margin_top"
        android:text="@string/address"
        android:textSize="@dimen/tv_text_size_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_event_description" />

    <TextView
        android:id="@+id/tv_event_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tv_margin_start"
        android:layout_marginTop="@dimen/tv_margin_top"
        android:text="@string/date"
        android:textSize="@dimen/tv_text_size_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_event_address" />

    <TextView
        android:layout_margin="20dp"
        android:id="@+id/tvAttendeesCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tv_margin_start"
        android:text="@string/attendees_list"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_event_date" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAttendeesCount">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <Button
                android:id="@+id/btn_yes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:text="@string/yes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_no"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:text="@string/no"
                app:layout_constraintStart_toEndOf="@id/btn_yes"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_maybe"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:text="@string/maybe"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_no"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>