<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="@dimen/cardView_height"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_event"
            android:layout_width="@dimen/imageView_width"
            android:layout_height="@dimen/imageView_height"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/tv_margin_start"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/tv_margin_start"
            android:layout_marginTop="@dimen/tv_margin"
            android:layout_toEndOf="@id/img_event"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_event_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/tv_padding"
                android:hint="@string/event_name"
                android:textSize="@dimen/tv_text_size_small" />

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/tv_padding"
                android:hint="@string/address"
                android:textSize="@dimen/tv_text_size_small" />

            <TextView
                android:id="@+id/tv_event_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/tv_padding"
                android:text="@string/event_description"
                android:textSize="@dimen/tv_text_size_small" />
            <TextView
                android:id="@+id/tv_event_date_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/tv_padding"
                android:hint="@string/date"
                android:textSize="@dimen/tv_text_size_small" />

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>
