<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="@dimen/size"
        android:layout_height="@dimen/size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_transparent_svg" />

    <TextView
        android:padding="20dp"
        android:id="@+id/tv_emailVerification"
        style="@style/editTextLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_check_your_inbox_to_verify_your_email_address"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_logo" />

    <TextView
        android:padding="20dp"
        android:id="@+id/tv_afterVerification"
        style="@style/editTextLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verified_your_email_address"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_sendEmail" />

    <TextView
        android:id="@+id/tv_empty"
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_afterVerification" />

    <TextView
        android:id="@+id/tv_countDown"
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_emailVerification" />

    <Button
        app:layout_constraintStart_toEndOf="@id/tv_empty"
        android:id="@+id/btn_back_to_sign_in"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/back_to_sign_in"
        app:layout_constraintTop_toBottomOf="@id/tv_afterVerification" />

    <Button
        android:id="@+id/btn_sendEmail"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/send_again"
        app:layout_constraintStart_toEndOf="@id/tv_countDown"
        app:layout_constraintTop_toBottomOf="@id/tv_emailVerification" />
</androidx.constraintlayout.widget.ConstraintLayout>

