<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:id="@+id/buttonsLayout"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">
        <Button
            android:id="@+id/btn_yes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/btn_margin_attendee_detail"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:text="@string/yes" />
        <Button
            android:id="@+id/btn_no"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/btn_margin_attendee_detail"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:text="@string/no" />
        <Button
            android:id="@+id/btn_maybe"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/btn_margin_attendee_detail"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:text="@string/maybe" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonsLayout">

        <TextView
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nothing_to_show"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_attendees"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/rv_padding"
            app:layout_constraintTop_toTopOf="parent">
        </androidx.recyclerview.widget.RecyclerView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>