<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/tv_pass_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/new_pass_tv_margin"
        android:padding="@dimen/img_margin"
        android:text="@string/enter_new_password"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_pass_text"
        style="@style/editTextLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pass_info"
        app:startIconDrawable="@drawable/ic_pass">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_pass_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edit_text"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@id/tv_pass_info" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_confirm_pass_text"
        style="@style/editTextLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_layout_pass_text"
        app:startIconDrawable="@drawable/ic_pass">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confirm_pass_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edit_text"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/et_pass_input" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="@dimen/btn_verification_frg_width"
        android:layout_height="@dimen/btn_verification_frg_height"
        android:layout_margin="@dimen/margin"
        android:background="@color/custom_button_color"
        android:text="@string/btn_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_layout_confirm_pass_text" />

</androidx.constraintlayout.widget.ConstraintLayout>